@@ -126,6 +126,9 @@ Release 2.14.1 Start 21/09/2021
 68. qmail-multi.c: use static queue if /qscheduler shared memory doesn't exist
 69. qmail-clean.c, qmail-queue.c, qmail-showctl.c, qmail-todo.c, qmta-send.c,
     qscheduler.c, queue-fix.c, slowq-send.c: Use default for BIGTODO as 1.
+70. slowq-send.c, qmta-send.c, qmail-todo.c: display bigtodo value in logs on
+    startup
+71.
 
 * 
 Release 2.14.0 Start 18/07/2021
